--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Demo webpage</title>
   </head>
   <body>
+    <a href="css_demo.html">Link to CSS demo file</a>
     <h1> Demo for MHCID285</h1>
     <p>This is a sample paragraph test test</p>
     <h4>Huyen Bui</h4>
