--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Demo webpage</title>
   </head>
   <body>
-    <a href="css_demo.html">Link to CSS demo file</a>
     <h1> Demo for MHCID285</h1>
     <p>This is a sample paragraph test test</p>
+    <a href="css_demo.html">Link to CSS demo file</a>
+    <a href="font-sample.html">Link to font sample file</a>
     <h4>Huyen Bui</h4>
   </body>
 </html>
