--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1> Demo for MHCID285</h1>
     <p>This is a sample paragraph test test</p>
-    <a href="css_demo.html">Link to CSS demo file</a>
+    <a href="css_demo.html">Link to CSS demo file</a><br><br>
     <a href="font-sample.html">Link to font sample file</a>
     <h4>Huyen Bui</h4>
   </body>
