--- a/font-sample.html
+++ b/font-sample.html
@@ -18,12 +18,17 @@
         font-family: 'Open Sans', sans-serif;
         font-weight: 400;
       }
+      #credit {
+        font-family: 'Merriweather', serif;
+        font-style: italic;
+        font-size: .8em;
+      }
     </style>
   </head>
   <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipiscing elit.</h1>
     <h2>Cras consequat orci ipsum, nec dapibus purus auctor quis. Proin vitae arcu eu libero hendrerit iaculis et non nisl.</h2>
     <p>Duis maximus tellus diam, id vestibulum velit placerat nec. Vestibulum dapibus, orci sed maximus bibendum, lectus arcu pharetra felis, ut bibendum tortor massa quis lectus. Aliquam sed gravida justo. Phasellus vel leo eu sapien tempor lobortis. Pellentesque congue porttitor eros ut tristique. Duis sed elit nibh. Morbi pretium, massa ac efficitur volutpat, massa nisl egestas ante, sed mollis ex justo at mi. Mauris a porta felis, a aliquet quam. Nunc at finibus massa. Proin semper erat quis neque dictum fringilla. Quisque id condimentum nulla, id tempus mi. Aliquam erat volutpat.</p>
-    <p><em>Huyen Bui, Apr. 27, 2021</em></p>
+    <p id="credit">Huyen Bui, Apr. 27, 2021</p>
   </body>
 </html>
