--- a/font-sample.html
+++ b/font-sample.html
@@ -3,7 +3,7 @@
   <head>
     <title>Font Sample Page</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Montserrat:wght@400;600&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,400;1,700&family=Montserrat:wght@400;600&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <style>
       h1 {
         font-family: 'Montserrat', sans-serif;
@@ -21,7 +21,7 @@
       #credit {
         font-family: 'Merriweather', serif;
         font-style: italic;
-        font-size: .8em;
+        font-weight: 600;
       }
     </style>
   </head>
