--- a/font-sample.html
+++ b/font-sample.html
@@ -5,6 +5,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,400;1,700&family=Montserrat:wght@400;600&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <style>
+      body {
+        width: 50%;
+        top: 50px;
+      }
       h1 {
         font-family: 'Montserrat', sans-serif;
         font-size: 3em;
