--- a/font-sample.html
+++ b/font-sample.html
@@ -7,7 +7,8 @@
     <style>
       body {
         width: 50%;
-        top: 50px;
+        top: 100px;
+        margin: auto;
       }
       h1 {
         font-family: 'Montserrat', sans-serif;
