--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <body>
     <h1> Demo for MHCID285</h1>
     <p>This is a sample paragraph test test</p>
-    <a href="css_demo.html">Link to CSS demo file</a><br><br>
-    <a href="font-sample.html">Link to font sample file</a>
+    <ol>
+      <li><a href="css_demo.html">Link to CSS demo file</a></li>
+      <li><a href="font-sample.html">Link to font sample file</a></li>
+      <li><a href="bootstrap-sample.html">Link to bootstrap sample file</a></li>
+    </ol>
     <h4>Huyen Bui</h4>
   </body>
 </html>
