--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -18,8 +18,11 @@
         width: 50%;
         margin: auto;
       }
-      .spacer {
+      .head-space {
         height: 200px;
+      }
+      .row-space {
+        padding: 0 100px;
       }
       h1 {
         font-family: 'Montserrat', sans-serif;
@@ -40,38 +43,38 @@
   </head>
   <body>
     <div class="container">
-      <div class="spacer"></div>
-      <img class="img-fluid" src"1009202021a_HDR.jpg" alt="yummy sushi"/>
+      <div class="head-space"></div>
+      <img src"1009202021a_HDR.jpg" alt="yummy sushi"/>
       <h1>What is Huyen's "usual" sushi order?</h1>
-      <div class="row">
+      <div class="row row-space">
         <div class="col">
           <h2>yellowtail</h2>
           <p>This is Huyen's favorite piece of fish. Soft and sweet but not quite oozing with fat. Tuna but not quite tuna. Basically delicious.</p>
         </div>
         <div class="col">
-          <img class="img-fluid" src"https://i.pinimg.com/originals/0d/1b/24/0d1b24afbf03b72cb202b456268f23f3.png" alt="yummy sushi"/>
+          <img src"https://i.pinimg.com/originals/0d/1b/24/0d1b24afbf03b72cb202b456268f23f3.png" alt="yummy sushi"/>
         </div>
       </div>
-      <div class="row">
+      <div class="row row-space">
         <div class="col">
-          <img class="img-fluid" src"https://i.redd.it/7kf8ju7ydba11.jpg" alt="yummy sushi"/>
+          <img src"https://i.redd.it/7kf8ju7ydba11.jpg" alt="yummy sushi"/>
         </div>
         <div class="col">
           <h2>mackerel</h2>
           <p>Huyen used to not like mackerel, but she has since come to love its cured fishiness and lovely oily texture. Feels meaty.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row row-space">
         <div class="col">
           <h2>uni</h2>
           <p>So buttery. So sweet. Great delicacy. My mouth waters just thinking about it.</p>
         </div>
         <div class="col">
-          <img class="img-fluid" src"https://render.fineartamerica.com/images/rendered/default/print/8/5.5/break/images-medium-5/sushi-uni-ryouchin.jpg" alt="yummy sushi"/>
+          <img src"https://render.fineartamerica.com/images/rendered/default/print/8/5.5/break/images-medium-5/sushi-uni-ryouchin.jpg" alt="yummy sushi"/>
         </div>
       </div>
       <footer class="footer">
-        <p>Huyen Bui, Apr. 29, 2021</p>
+        <p><em>Huyen Bui, Apr. 29, 2021</em></p>
       </footer>
     </div>
 
