--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -21,7 +21,7 @@
       .head-space {
         height: 200px;
       }
-      .row-space {
+      .vert-space {
         margin: 100px 0;
       }
       h1 {
@@ -32,10 +32,14 @@
       h2 {
         font-family: 'Merriweather', serif;
         font-style: italic;
+        font-size: 1em;
       }
       p {
         font-family: 'Open Sans', sans-serif;
         font-weight: 400;
+      }
+      .btn .btn-outline-primary {
+
       }
     </style>
 
@@ -44,7 +48,7 @@
   <body>
     <div class="container">
       <div class="head-space"></div>
-      <img class="img-fluid" src"1009202021a_HDR.jpg" alt="yummy sushi"/>
+      <img class="img-fluid vert-space" src"1009202021a_HDR.jpg" alt="yummy sushi">
       <h1>What is Huyen's "usual" sushi order?</h1>
       <div class="row row-space">
         <div class="col">
@@ -52,12 +56,12 @@
           <p>This is Huyen's favorite piece of fish. Soft and sweet but not quite oozing with fat. Tuna but not quite tuna. Basically delicious.</p>
         </div>
         <div class="col">
-          <img class="img-fluid" src"https://i.pinimg.com/originals/0d/1b/24/0d1b24afbf03b72cb202b456268f23f3.png" alt="yummy sushi"/>
+          <img class="img-fluid" src"https://i.pinimg.com/originals/0d/1b/24/0d1b24afbf03b72cb202b456268f23f3.png" alt="yummy sushi">
         </div>
       </div>
       <div class="row row-space">
         <div class="col">
-          <img class="img-fluid" src"https://i.redd.it/7kf8ju7ydba11.jpg" alt="yummy sushi"/>
+          <img class="img-fluid" src"https://i.redd.it/7kf8ju7ydba11.jpg" alt="yummy sushi">
         </div>
         <div class="col">
           <h2>mackerel</h2>
@@ -70,10 +74,10 @@
           <p>So buttery. So sweet. Great delicacy. My mouth waters just thinking about it.</p>
         </div>
         <div class="col">
-          <img class="img-fluid" src"https://render.fineartamerica.com/images/rendered/default/print/8/5.5/break/images-medium-5/sushi-uni-ryouchin.jpg" alt="yummy sushi"/>
+          <img class="img-fluid" src"https://render.fineartamerica.com/images/rendered/default/print/8/5.5/break/images-medium-5/sushi-uni-ryouchin.jpg" alt="yummy sushi">
         </div>
       </div>
-      <a class="btn btn-outline-rpimary" href="https://www.yelp.com/biz/sushi-komasa-los-angeles-2?osq=sushi+komasa" alt"komasa" role="button">I want sushi, too</a>
+      <a class="btn btn-outline-primary vert-space" href="https://www.yelp.com/biz/sushi-komasa-los-angeles-2?osq=sushi+komasa" alt"komasa" role="button">I want sushi, too</a>
       <footer class="footer">
         <p><em>Huyen Bui, Apr. 29, 2021</em></p>
       </footer>
