--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -18,11 +18,15 @@
         width: 50%;
         margin: auto;
       }
-      .head-space {
+      .spacer {
         height: 200px;
       }
       .vert-space {
         margin: 100px 0;
+      }
+      img-header {
+        width: 80%;
+        height: 200px;
       }
       h1 {
         font-family: 'Montserrat', sans-serif;
@@ -33,6 +37,7 @@
         font-family: 'Merriweather', serif;
         font-style: italic;
         font-size: 1.2em;
+        line-height: 1.5em;
       }
       p {
         font-family: 'Open Sans', sans-serif;
@@ -40,7 +45,8 @@
       }
       .btn-outline-primary {
         margin: 100px auto;
-        border: #333;
+        border: 1px #333;
+        border-radius: 2px;
         color: #333;
       }
       .btn-outline-primary:hover {
@@ -52,8 +58,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="head-space"></div>
-      <img class="img-fluid vert-space" src="1009202021a_HDR.jpg" alt="yummy sushi">
+      <div class="spacer"></div>
+      <img class="img-fluid vert-space img-header" src="1009202021a_HDR.jpg" alt="yummy sushi">
       <h1>What is Huyen's "usual" sushi order?</h1>
       <div class="row vert-space">
         <div class="col-md-8">
@@ -61,7 +67,7 @@
           <p>This is Huyen's favorite piece of fish. Soft and sweet but not quite oozing with fat. Tuna but not quite tuna. Basically delicious.</p>
         </div>
         <div class="col-md-4">
-          <img class="img-fluid" src="https://i.pinimg.com/originals/0d/1b/24/0d1b24afbf03b72cb202b456268f23f3.png" alt="yummy sushi">
+          <img class="img-fluid" src="https://media-cdn.tripadvisor.com/media/photo-s/0e/24/37/42/yellowtail-sushi.jpg" alt="yummy sushi">
         </div>
       </div>
       <div class="row vert-space">
@@ -82,10 +88,11 @@
           <img class="img-fluid" src="https://render.fineartamerica.com/images/rendered/default/print/8/5.5/break/images-medium-5/sushi-uni-ryouchin.jpg" alt="yummy sushi">
         </div>
       </div>
-      <a class="btn btn-outline-primary" href="https://www.yelp.com/biz/sushi-komasa-los-angeles-2?osq=sushi+komasa" alt"komasa" role="button">I want sushi now</a>
+      <a class="btn btn-outline-primary" href="https://www.yelp.com/biz/sushi-komasa-los-angeles-2?osq=sushi+komasa" alt"komasa" role="button" target="_blank">I want sushi now</a>
       <footer class="footer">
         <p><em>Huyen Bui, Apr. 29, 2021</em></p>
       </footer>
+      <div class="spacer"></div>
     </div>
 
 
