--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -26,7 +26,10 @@
       }
       .img-header {
         width: 80%;
-        height: 200px;
+        margin: auto;
+      }
+      .description-box {
+        padding: 5%;
       }
       h1 {
         font-family: 'Montserrat', sans-serif;
@@ -45,7 +48,7 @@
         font-weight: 400;
       }
       .btn, .btn-outline-primary {
-        margin: 100px auto;
+        margin: auto 100px;
         border: 1px solid #333;
         border-radius: 5px;
         color: #333;
@@ -63,7 +66,7 @@
       <img class="img-fluid vert-space img-header" src="1009202021a_HDR.jpg" alt="yummy sushi">
       <h1>What is Huyen's "usual" sushi order?</h1>
       <div class="row vert-space">
-        <div class="col-md-8">
+        <div class="col-md-8 description-box">
           <h2>yellowtail</h2>
           <p>This is Huyen's favorite piece of fish. Soft and sweet but not quite oozing with fat. Tuna but not quite tuna. Basically delicious.</p>
         </div>
@@ -75,13 +78,13 @@
         <div class="col-md-4">
           <img class="img-fluid" src="https://i.redd.it/7kf8ju7ydba11.jpg" alt="yummy mackerel">
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 description-box">
           <h2>mackerel</h2>
           <p>Huyen used to not like mackerel, but she has since come to love its cured fishiness and lovely oily texture. Feels meaty.</p>
         </div>
       </div>
       <div class="row vert-space">
-        <div class="col-md-8">
+        <div class="col-md-8 description-box">
           <h2>uni</h2>
           <p>So buttery. So sweet. Great delicacy. My mouth waters just thinking about it.</p>
         </div>
