--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -25,11 +25,11 @@
         margin: 100px 0;
       }
       .img-header {
-        width: 80%;
+        width: 60%;
         margin: auto;
       }
       .description-box {
-        padding: 5%;
+        padding: 2% 0;
       }
       h1 {
         font-family: 'Montserrat', sans-serif;
@@ -48,7 +48,7 @@
         font-weight: 400;
       }
       .btn, .btn-outline-primary {
-        margin: auto 100px;
+        margin: 100px auto;
         border: 1px solid #333;
         border-radius: 5px;
         color: #333;
