--- a/font-sample.html
+++ b/font-sample.html
@@ -7,6 +7,8 @@
     <style>
       body {
         width: 50%;
+        top: 100px;
+        position: relative;
         margin: auto;
       }
       h1 {
