--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -17,6 +17,7 @@
       body {
         width: 50%;
         margin: auto;
+        position: relative;
       }
       .spacer {
         height: 200px;
@@ -25,17 +26,17 @@
         margin: 100px 0;
       }
       .img-header {
-        width: 60%;
+        width: 50%;
         margin: auto;
       }
       .description-box {
-        padding: 2% 0;
+        padding: 2% 0 5%;
       }
       h1 {
         font-family: 'Montserrat', sans-serif;
         font-size: 1.5em;
         font-weight: 600;
-        margin: 100px 0;
+        margin: 200px 0;
       }
       h2 {
         font-family: 'Merriweather', serif;
