--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -28,9 +28,10 @@
       .img-header {
         width: 50%;
         margin: auto;
+        position: relative;
       }
-      .description-box {
-        padding: 2% 0 5%;
+      img {
+        margin: 5% 2%;
       }
       h1 {
         font-family: 'Montserrat', sans-serif;
