--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -17,7 +17,6 @@
       body {
         width: 50%;
         margin: auto;
-        position: relative;
       }
       .spacer {
         height: 200px;
@@ -26,12 +25,11 @@
         margin: 100px 0;
       }
       .img-header {
-        width: 50%;
+        width: 60%;
         margin: auto;
-        position: relative;
       }
       img {
-        margin: 5% 2%;
+        margin: 5%;
       }
       h1 {
         font-family: 'Montserrat', sans-serif;
