--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -25,8 +25,11 @@
         margin: 100px 0;
       }
       .img-header {
-        width: 300px;
+        width: 350px;
         margin: auto;
+      }
+      .description-box {
+        margin-left: 5%;
       }
       img {
         margin: 5%;
@@ -35,7 +38,7 @@
         font-family: 'Montserrat', sans-serif;
         font-size: 1.5em;
         font-weight: 600;
-        margin: 50px 0 200px;
+        margin: 70px 0 200px;
       }
       h2 {
         font-family: 'Merriweather', serif;
