--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -29,7 +29,7 @@
         margin: auto;
       }
       .description-box {
-        margin-left: 5%;
+        padding-left: 5%;
       }
       img {
         margin: 5%;
