--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -25,8 +25,9 @@
         margin: 100px 0;
       }
       .img-header {
-        width: 350px;
+        width: 320px;
         margin: auto;
+        border: 10px solid #ededed;
       }
       .description-box {
         padding-left: 5%;
