--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -28,6 +28,7 @@
         width: 320px;
         margin: auto;
         border: 10px solid #ededed;
+        display: block;
       }
       .description-box {
         padding-left: 5%;
@@ -56,6 +57,7 @@
         border: 1px solid #333;
         border-radius: 5px;
         color: #333;
+        display: block;
       }
       .btn-outline-primary:hover {
         background-color: #333;
@@ -67,6 +69,7 @@
   <body>
     <div class="container">
       <div class="spacer"></div>
+      <div id
       <img class="img-fluid vert-space img-header" src="1009202021a_HDR.jpg" alt="yummy sushi">
       <h1>What is Huyen's "usual" sushi order?</h1>
       <div class="row vert-space">
