--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -25,9 +25,8 @@
         margin: 100px 0;
       }
       .img-header {
-        width: 320px;
+        width: 70%;
         margin: auto;
-        border: 10px solid #ededed;
         display: block;
       }
       .description-box {
@@ -58,6 +57,7 @@
         border-radius: 5px;
         color: #333;
         display: block;
+        width: 150px;
       }
       .btn-outline-primary:hover {
         background-color: #333;
