Centered h1 title header

--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -39,7 +39,7 @@
         font-family: 'Montserrat', sans-serif;
         font-size: 1.5em;
         font-weight: 600;
-        margin: 100px 0 200px;
+        margin: 100px auto 200px;
       }
       h2 {
         font-family: 'Merriweather', serif;
