--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -40,6 +40,7 @@
         font-size: 1.5em;
         font-weight: 600;
         margin: 100px auto 200px;
+        display: block;
       }
       h2 {
         font-family: 'Merriweather', serif;
