--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -53,14 +53,14 @@
       }
       .btn, .btn-outline-primary {
         margin: 100px auto;
-        border: 1px solid #333;
+        border: 1px solid red;
         border-radius: 5px;
-        color: #333;
+        color: red;
         display: block;
         width: 150px;
       }
       .btn-outline-primary:hover {
-        background-color: #333;
+        background-color: red;
       }
     </style>
 
