Reverted button red test, confirmed border #333 on button hover

--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -53,14 +53,15 @@
       }
       .btn, .btn-outline-primary {
         margin: 100px auto;
-        border: 1px solid red;
+        border: 1px solid #333;
         border-radius: 5px;
-        color: red;
+        color: #333;
         display: block;
         width: 150px;
       }
       .btn-outline-primary:hover {
-        background-color: red;
+        background-color: #333;
+        border: 1px solid #333;
       }
     </style>
 
